--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "private": true,
   "description": "Best app ever made in history",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "axios": "^0.27.2",
-    "react": "16.8.2",
-    "react-dom": "16.8.2",
-    "react-redux": "5.0.4",
-    "react-scripts": "^3.4.4",
+    "moment": "^2.29.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
-    "redux": "^3.5.2",
-    "redux-thunk": "^0.1.0",
-    "web-vitals": "^0.2.4"
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.53.0",
+    "web-vitals": "^2.1.4"
   },
   "author": "Vinicius Cerqueira Bonifacio <vinicius@choicely.com>",
   "license": "MIT",
