--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-watch-typeahead": "^0.6.5",
+    "redux-mock-store": "^1.5.4"
   }
 }
